# musicbox-rs

./: .gitignore  Cargo.toml  build  gulpfile.ts  package-lock.json  package.json  run  tsconfig.json
.cargo/: config
config/default/: hw_config.json
config/rpi/: hw_config.json
hw_configs/: pi-zero-w.json
musicbox/: Cargo.toml
musicbox/src/: assets.rs  cli.yml  error.rs  events.rs  hardware.rs  hw_config.rs  lib.rs  main.rs  musicbox.rs  player.rs  playlist.rs  track.rs
musicbox/src/hardware/: gpio.rs  keyboard.rs
musicbox/src/hardware/gpio/: button.rs  led.rs
rpi-futures/: Cargo.toml
rpi-futures/src/: gpio.rs  lib.rs
src/: appstate.rs  assets.rs  events.rs  hardware.rs  hw_config.rs  lib.rs  main.rs  musicbox.rs  player.rs  playlist.rs  server.rs  term_logger.rs  track.rs
src/hardware/gpio/: button.rs
toolchains/: build  config
toolchains/arm-linux-gnueabi/: install
toolchains/arm-linux-gnueabihf/: .config  install
toolchains/x86_64-linux-gnu/: .config
webapp/: index.html
webapp/css/: app.scss  reset.scss
webapp/js/: app.tsx
webapp/js/api/: connection.ts  helpers.ts  index.ts
webapp/js/components/: player.tsx  sidebar.tsx
webapp/js/store/: actions.ts  helpers.ts  index.ts  reducer.ts
webapp/js/types/: api.ts  musicbox.ts  store.ts
