[package]
name = "musicbox"
version = "0.1.0"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
edition = "2018"

[[bin]]
name = "musicbox"

[dependencies]
rppal = "^0.11.3"
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
rpi-futures = { path = "../rpi-futures" }
env_logger = "^0.6.2"
tokio = "=0.2.0-alpha.4"
mp3-metadata = "^0.3.2"
hyper = "=0.13.0-alpha.1"
rodio = "^0.9.0"
serde = { version = "^1.0.100", features = ["derive"] }
serde_json = "^1.0.40"
clap = { version = "^2.33.0", features = ["yaml"] }
daemonize = "^0.4.1"
log = "^0.4.8"
signal-hook = { version = "^0.1.10", features = ["tokio-support"] }
